<resources>
    <string name="app_name">Connect</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signUp">Sign Up</string>
    <string name="facebook">Login with Facebook</string>
    <string name="twitter">Login with Twitter</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cancel">CANCEL</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="username">Username</string>
    <string name="rbMale">Male</string>
    <string name="rbFemale">Female</string>
    <string name="fandlname">First Name Last Name</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="cnfPassword">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="choose">Choose Picture</string>
    <string name="title_activity_app_page">AppPage</string>
    <string name="update">UPDATE</string>
    <string name="facebook_app_id">406580882874675</string>
    <string name="continueString">Continue</string>
    <string name="notif">Notifications</string>
    <string name="title_activity_sign_up_profile">SignUpProfile</string>
    <string name="title_activity_user_profile_view">UserProfileView</string>



    <string name="action_invite">Invite Users</string>
    <string name="action_delete">Delete Album</string>
    <string name="action_invi_stats">Invite Stats</string>
    <string name="chg_privacy">Change Album Privacy</string>
    <string name="mod_list">View Moderation List</string>
    <string name="title_activity_mod_list">ModList</string>
    <string name="create">Create New Album</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_project">ProjectActivity</string>
    <string name="privacy">Make Album</string>
    <string name="album_name">Please Enter Album Name</string>
    <string name="title_activity_photo_preview">Photo Preview</string>







<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_compose_message">ComposeMessage</string>
    <string name="title_activity_user_profile_edit">UserProfileEditActivity</string>
    <string name="title_activity_album_activity_intergrated">AlbumActivityIntergrated</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_other_user_profile">OtherUserProfile</string>
    <string name="title_activity_other_user_profile_information">OtherUserProfileInformation
    </string>
    <string name="title_activity_view_user_album">ViewUserAlbum</string>
</resources>
