<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.mad.albumapp.UserProfileFragment">

    <!-- TODO: Update blank fragment layout -->


    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_backdrop_height"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginEnd="64dp">

                <ImageView
                    android:id="@+id/imageedit"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/camera"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin">

                    <LinearLayout
                        style="@style/Widget.CardContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <!--                    <TextView
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:text="@string/fandlname"
                                                android:textAppearance="@style/TextAppearance.AppCompat.Title" />-->
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:hint="@string/fandlname"
                            android:id="@+id/etNameedit" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:ems="10"
                            android:hint="@string/email"
                            android:id="@+id/etEmailedit" />


                        <!--<LinearLayout
                            style="@style/Widget.CardContent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">-->

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:id="@+id/textGender"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                        <RadioGroup
                            android:layout_below="@+id/textGender"
                            android:layout_gravity="center"
                            android:orientation="horizontal"
                            android:id="@+id/rgedit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rbMale"
                                android:id="@+id/rbMaleedit" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rbFemale"
                                android:id="@+id/rbFemaleedit" />

                        </RadioGroup>

                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Private Profile"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:id="@+id/switch1edit"
                            android:textOn="YES"
                            android:textOff="NO" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/notif"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center"
                            android:id="@+id/checkBoxedit" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_anchor="@id/appbar"
            app:layout_anchorGravity="bottom|right|end"
            android:src="@drawable/ic_edit"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            android:id="@+id/floatingActionButtonedit" />

    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>
